After 2017 10 20 update Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/admin_doctor_consultant_1.xhtml
+++ b/src/main/webapp/admin_doctor_consultant_1.xhtml
@@ -57,7 +57,7 @@
                                         </f:facet>
                                         <p:outputLabel value="#{c.speciality.name}" />
                                     </p:column>
-                                    <p:column>
+                                    <p:column sortBy="#{c.code}">
                                         <f:facet name="header" >
                                             <p:outputLabel value="Code" />
                                         </f:facet>
