--- a/src/main/webapp/inward/inward_reprint_bill_final.xhtml
+++ b/src/main/webapp/inward/inward_reprint_bill_final.xhtml
@@ -28,7 +28,7 @@
                                                 <p:printer target="professionalAndFinaBill" ></p:printer>
                                             </p:commandButton>
                                             <p:commandButton value="Final Bill &amp; Profesional Bill(Duplicate)" ajax="false"   >
-                                                <p:printer target="professionalAndFinaBill" ></p:printer>
+                                                <p:printer target="professionalAndFinaBillDup" ></p:printer>
                                             </p:commandButton>
                                             <p:commandButton value="Print Credit Company Letter" ajax="false"  >
                                                 <p:printer target="letter" ></p:printer>
