--- a/src/main/webapp/lab_patient_report.xhtml
+++ b/src/main/webapp/lab_patient_report.xhtml
@@ -98,21 +98,21 @@
                                                             <h:outputLabel value="#{pvv.investigationItem.name}"></h:outputLabel>
                                                         </td>
                                                         <td >
-                                                            <p:inputText autocomplete="off" value="#{pvv.strValue}" 
+                                                            <p:inputText autocomplete="off" value="#{pvv.strValue}" disabled="#{patientReportController.currentPatientReport.approved eq true and !webUserController.hasPrivilege('LabReportEdit')}"
                                                                          rendered="#{pvv.investigationItem.ixItemValueType eq 'Varchar' and empty pvv.investigationItem.investigationItemValues}" >
                                                                 <p:ajax process="@this" event="blur" listener="#{patientReportController.savePatientReportItemValues()}"></p:ajax>
                                                             </p:inputText>
-                                                            <p:selectOneMenu value="#{pvv.strValue}" 
+                                                            <p:selectOneMenu value="#{pvv.strValue}" disabled="#{patientReportController.currentPatientReport.approved eq true and !webUserController.hasPrivilege('LabReportEdit')}"
                                                                              rendered="#{pvv.investigationItem.ixItemValueType eq 'Varchar' and !empty pvv.investigationItem.investigationItemValues}" 
                                                                              editable="true"  style="min-width: 300px!important;" >
                                                                 <f:selectItems value="#{pvv.investigationItem.investigationItemValues}" var="iiv" itemLabel="#{iiv.name}" itemValue="#{iiv.name}" ></f:selectItems>
                                                                 <p:ajax process="@this" event="change" listener="#{patientReportController.savePatientReportItemValues()}"></p:ajax>
                                                             </p:selectOneMenu>
                                                             <p:inputText id="txtValDbl" autocomplete="off" value="#{pvv.doubleValue}" validatorMessage="Entered value not valid. Please recheck." converterMessage="Entered value not valid. Please recheck."
-                                                                         rendered="#{pvv.investigationItem.ixItemValueType eq 'Double'}" >
+                                                                         rendered="#{pvv.investigationItem.ixItemValueType eq 'Double'}" disabled="#{patientReportController.currentPatientReport.approved eq true and !webUserController.hasPrivilege('LabReportEdit')}">
                                                                 <p:ajax process="@this" event="blur" listener="#{patientReportController.savePatientReportItemValues()}"></p:ajax>
                                                             </p:inputText>
-                                                            <p:inputTextarea  value="#{pvv.lobValue}" queryDelay="0"
+                                                            <p:inputTextarea  value="#{pvv.lobValue}" queryDelay="0" disabled="#{patientReportController.currentPatientReport.approved eq true and !webUserController.hasPrivilege('LabReportEdit')}"
                                                                               rendered="#{pvv.investigationItem.ixItemValueType eq 'Memo'}" >
                                                                 <p:ajax process="@this" event="blur" listener="#{patientReportController.savePatientReportItemValues()}"></p:ajax>
                                                             </p:inputTextarea>
@@ -137,11 +137,11 @@
                                                                 <h:outputLabel value="#{pvcal.investigationItem.name}" ></h:outputLabel>
                                                             </td>
                                                             <td >
-                                                                <h:inputText autocomplete="off" value="#{pvcal.strValue}" 
+                                                                <h:inputText autocomplete="off" value="#{pvcal.strValue}" disabled="#{patientReportController.currentPatientReport.approved eq true and !webUserController.hasPrivilege('LabReportEdit')}"
                                                                              rendered="#{pvcal.investigationItem.ixItemValueType eq 'Varchar'}" >
                                                                     <f:ajax execute="@this" event="blur" listener="#{patientReportController.savePatientReportItemValues()}"></f:ajax>
                                                                 </h:inputText>
-                                                                <p:inputText autocomplete="off" value="#{pvcal.doubleValue}" 
+                                                                <p:inputText autocomplete="off" value="#{pvcal.doubleValue}" disabled="#{patientReportController.currentPatientReport.approved eq true and !webUserController.hasPrivilege('LabReportEdit')}"
                                                                              rendered="#{pvcal.investigationItem.ixItemValueType eq 'Double'}" >
                                                                     <f:convertNumber pattern="0.0" ></f:convertNumber>
                                                                     <f:ajax execute="@this" event="blur" listener="#{patientReportController.savePatientReportItemValues()}"></f:ajax>
@@ -164,7 +164,7 @@
                                                                 <h:outputLabel value="#{pvf.investigationItem.name}" ></h:outputLabel>
                                                             </td>
                                                             <td>
-                                                                <p:selectOneMenu id="cmbStrFlag" value="#{pvf.strValue}" editable="true" style="min-width: 200px;" >
+                                                                <p:selectOneMenu id="cmbStrFlag" value="#{pvf.strValue}" editable="true" style="min-width: 200px;" disabled="#{patientReportController.currentPatientReport.approved eq true and !webUserController.hasPrivilege('LabReportEdit')}">
                                                                     <f:selectItems value="#{testFlagController.getIxItemFlags(pvf.investigationItem)}" var="iivfh" itemLabel="#{iivfh.highMessage}" itemValue="#{iivfh}" ></f:selectItems>
                                                                     <f:selectItems value="#{testFlagController.getIxItemFlags(pvf.investigationItem)}" var="iivfl" itemLabel="#{iivfl.lowMessage}" itemValue="#{iivfl}" ></f:selectItems>
                                                                     <f:selectItems value="#{testFlagController.getIxItemFlags(pvf.investigationItem)}" var="iivf" itemLabel="#{iivf.normalMessage}" itemValue="#{iivf}" ></f:selectItems>
@@ -190,7 +190,7 @@
                                                             <h:outputLabel value="#{pvd.investigationItem.name}" ></h:outputLabel>
                                                         </td>
                                                         <td>
-                                                            <p:selectOneMenu  id="cmbStrDl" value="#{pvd.strValue}" editable="true" style="min-width: 200px;" >
+                                                            <p:selectOneMenu  id="cmbStrDl" value="#{pvd.strValue}" editable="true" style="min-width: 200px;" disabled="#{patientReportController.currentPatientReport.approved eq true and !webUserController.hasPrivilege('LabReportEdit')}">
                                                                 <f:selectItems value="#{investigationItemDynamicLabelController.getDynamicLabelsByIxItId(pvd.investigationItem) }" var="iivd" itemLabel="#{iivd.flagMessage}" itemValue="#{iivd}" ></f:selectItems>
                                                                 <p:ajax process="@this" event="change" listener="#{patientReportController.savePatientReportItemValues()}"></p:ajax>
                                                             </p:selectOneMenu>
@@ -217,13 +217,13 @@
 
                                                                 <h:panelGroup rendered="#{pvm.investigationItem.ixItemValueType eq 'Memo'}" >
                                                                     <p:inputTextarea id="txtMicMemoVal" queryDelay="0"   minQueryLength="1"  style="min-width: 200px; "  
-                                                                                     completeMethod="#{investigationItemValueController.completeValues}" 
+                                                                                     completeMethod="#{investigationItemValueController.completeValues}" disabled="#{patientReportController.currentPatientReport.approved eq true and !webUserController.hasPrivilege('LabReportEdit')}"
                                                                                      value="#{pvm.lobValue}" >
                                                                         <p:ajax process="@this" event="blur" listener="#{patientReportController.savePatientReportItemValues()}"></p:ajax>
                                                                     </p:inputTextarea>
                                                                 </h:panelGroup>
                                                                 <h:panelGroup rendered="#{pvm.investigationItem.ixItemValueType eq 'Varchar'}">
-                                                                    <p:selectOneMenu id="cmbMicStrVal" value="#{pvm.strValue}" editable="true"  style="min-width: 300px!important;" >
+                                                                    <p:selectOneMenu id="cmbMicStrVal" value="#{pvm.strValue}" editable="true"  style="min-width: 300px!important;" disabled="#{patientReportController.currentPatientReport.approved eq true and !webUserController.hasPrivilege('LabReportEdit')}">
                                                                         <f:selectItem itemLabel="SENSITIVE" itemValue="SENSITIVE" ></f:selectItem>
                                                                         <f:selectItem itemLabel="Resistant" itemValue="Resistant" ></f:selectItem>
                                                                         <f:selectItem itemLabel="Intermediate" itemValue="Intermediate" ></f:selectItem>
