--- a/src/main/webapp/pharmacy/pharmacy_report_before_stock_taking.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_before_stock_taking.xhtml
@@ -32,6 +32,7 @@
                                 <f:selectItem itemLabel="Only Item" itemValue="1" />
                                 <f:selectItem itemLabel="Item By Sale Rate" itemValue="2" />
                                 <f:selectItem itemLabel="Extra Medicine" itemValue="3" />
+                                <f:selectItem itemLabel="Extra Note" itemValue="4" />
                             </p:selectOneRadio>
                             <p:commandButton ajax="false" value="Process" actionListener="#{reportsStock.fillCategoryStocksNew()}" ></p:commandButton>
                             <p:commandButton value="Print" ajax="false" >
@@ -51,14 +52,20 @@
                                     <h:outputLabel value="Date : "><p:clock pattern="dd MM yy hh:mm:ss a" /></h:outputLabel>
                                 </f:facet> 
 
-                                <p:column headerText="No">
+                                <p:column headerText="No" rendered="#{reportsStock.reportKeyWord.string ne '4'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="No"/>    
                                     </f:facet>
-                                    <h:outputLabel value="#{a+1}" ></h:outputLabel>
+                                    <h:outputLabel value="#{a+1}" rendered="#{reportsStock.reportKeyWord.string ne '3'}" ></h:outputLabel>
+                                    <h:outputLabel value="Ex - #{a+1}" rendered="#{reportsStock.reportKeyWord.string eq '3'}" ></h:outputLabel>
+                                </p:column>
+                                <p:column headerText="Serial No" rendered="#{reportsStock.reportKeyWord.string eq '4'}">
+                                    <f:facet name="header">
+                                    </f:facet>
+                                    <h:outputLabel value="........."  ></h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Item" rendered="#{reportsStock.reportKeyWord.string ne '3'}">
+                                <p:column headerText="Item" rendered="#{reportsStock.reportKeyWord.string ne '3' and reportsStock.reportKeyWord.string ne '4'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Item"/>    
                                     </f:facet>
@@ -69,17 +76,17 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Item"/>    
                                     </f:facet>
-                                    <h:outputLabel value="............................................." ></h:outputLabel>
+                                    <h:outputLabel value="........................................" ></h:outputLabel>
                                 </p:column>
-
-                                <p:column headerText="Code">
+                                
+                                <p:column headerText="Code" rendered="#{reportsStock.reportKeyWord.string ne '3' and reportsStock.reportKeyWord.string ne '4'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Code"/>
                                     </f:facet>
                                     <h:outputLabel value="#{i.itemBatch.item.code}" style="width: 50px!important;" ></h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Stock Quentity" styleClass="noPrintButton" rendered="#{reportsStock.reportKeyWord.string ne '3'}">
+                                <p:column headerText="Stock Quentity" styleClass="noPrintButton" rendered="#{reportsStock.reportKeyWord.string ne '3' and reportsStock.reportKeyWord.string ne '4'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Before Stock Quantity"/>    
                                     </f:facet>
@@ -88,7 +95,7 @@
                                     </h:outputLabel>                                  
                                 </p:column>
 
-                                <p:column headerText="Purchase Rate" styleClass="noPrintButton" rendered="#{reportsStock.reportKeyWord.string eq '0'}">
+                                <p:column headerText="Purchase Rate" styleClass="noPrintButton" rendered="#{reportsStock.reportKeyWord.string eq '0' and reportsStock.reportKeyWord.string ne '4'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Purchase Rate"/>    
                                     </f:facet>
@@ -97,7 +104,7 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Sale Rate" rendered="#{reportsStock.reportKeyWord.string eq '2'}">
+                                <p:column headerText="Sale Rate" rendered="#{reportsStock.reportKeyWord.string eq '2'and reportsStock.reportKeyWord.string ne '4'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Sale Rate" />    
                                     </f:facet>
@@ -106,7 +113,7 @@
                                     </h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Purchase Value" styleClass="noPrintButton" rendered="#{reportsStock.reportKeyWord.bool1 eq false}">
+                                <p:column headerText="Purchase Value" styleClass="noPrintButton" rendered="#{reportsStock.reportKeyWord.string ne '4'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Purchase Value"/>    
                                     </f:facet>
@@ -120,34 +127,41 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Physical Stock(Total)" style="text-align: center;">
+                                <p:column headerText="Physical Stock(Total)" style="text-align: center;" rendered="#{reportsStock.reportKeyWord.string ne '4'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Physical Stock(Total)"/>    
                                     </f:facet>
                                     <h:outputLabel value="#{a+1})__________"  ></h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="Physical Stock" style="text-align: center;">
+                                <p:column headerText="Physical Stock" style="text-align: center;" rendered="#{reportsStock.reportKeyWord.string ne '4'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Physical Stock"/>    
                                     </f:facet>
                                     <h:outputLabel value="#{a+1})__________________"  ></h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="DOE" style="text-align: center;">
+                                <p:column headerText="DOE" style="text-align: center;" rendered="#{reportsStock.reportKeyWord.string ne '4'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="DOE"/>    
                                     </f:facet>
                                     <h:outputLabel value="____________"  ></h:outputLabel>
                                 </p:column>
 
-                                <p:column headerText="DOE" styleClass="noPrintButton" rendered="#{reportsStock.reportKeyWord.bool1 eq false}">
+                                <p:column headerText="DOE" styleClass="noPrintButton" rendered="#{reportsStock.reportKeyWord.string ne '4'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="DOE"/>    
                                     </f:facet>
                                     <h:outputLabel value="#{i.itemBatch.dateOfExpire}"  >
                                         <f:convertDateTime pattern="YYYY MM dd" />
                                     </h:outputLabel>                                  
+                                </p:column>
+                                
+                                <p:column headerText="Note" rendered="#{reportsStock.reportKeyWord.string eq '4'}">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Note"/>    
+                                    </f:facet>
+                                    <h:outputLabel value="..........................................................................................................................................................." />                                
                                 </p:column>
 
 
