--- a/src/main/webapp/store/consumable_category/List.xhtml
+++ b/src/main/webapp/store/consumable_category/List.xhtml
@@ -27,7 +27,7 @@
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
-                        <p:column>
+                        <p:column sortBy="#{item.name}">
                             <f:facet name="header">
                                 <h:outputText value="Category Name"/>
                             </f:facet>
