--- a/src/main/webapp/store/store_reports_index.xhtml
+++ b/src/main/webapp/store/store_reports_index.xhtml
@@ -38,6 +38,7 @@
                                     <h:panelGrid columns="1" >
                                         <p:commandButton styleClass="linkButton" value="Items by name" action="store_report_amp_by_name" ajax="false" ></p:commandButton>                            
                                         <p:commandButton styleClass="linkButton" value="Items by code" action="store_report_amp_by_code" ajax="false" ></p:commandButton>                            
+                                        <p:commandButton styleClass="linkButton" value="Items Report" action="/dataAdmin/store_item_list" ajax="false" ></p:commandButton>                            
                                     </h:panelGrid>
                                 </p:panel>
 
