--- a/src/main/webapp/dataAdmin/admin_data_administration.xhtml
+++ b/src/main/webapp/dataAdmin/admin_data_administration.xhtml
@@ -77,6 +77,11 @@
                                                value="18. Check BillFees Without Fee Type"  onclick="if (!confirm('Really want to do that?'))
                                                            return false"/>
                                 <p:commandLink ajax="false" value="19. Investigatio/Services"  action="item_list_for_vat"/>
+                                
+                                <p:commandLink ajax="false" value="20. Pharmacy Item Code Set By Category Wise"  action="list_amps"/>
+                                
+                                <p:commandLink ajax="false" value="21. Store Item Code Set By Category Wise"  action="list_store"/>
+                                <p:commandLink ajax="false" value="22. Duplicated Bill Numbers By Bill Type"  action="admin_all_bill_type_bills_1"/>
 
                             </p:panelGrid>
 
