--- a/src/main/webapp/pharmacy/pharmacy_pharmaceutical_item_category.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_pharmaceutical_item_category.xhtml
@@ -53,6 +53,8 @@
                                 <h:panelGrid id="gpDetailText" columns="2">
                                     <h:outputText id="lblName" value="Name" ></h:outputText>
                                     <h:inputText autocomplete="off" id="txtName" value="#{pharmaceuticalItemCategoryController.current.name}"  ></h:inputText>
+                                    <h:outputText id="lblCode" value="Code" ></h:outputText>
+                                    <h:inputText autocomplete="off" id="txtCode" value="#{pharmaceuticalItemCategoryController.current.description}"  ></h:inputText>
 
                                 </h:panelGrid>
                                 <h:panelGrid id="gpDetailButtons" columns="2">
