--- a/src/main/webapp/store/store_purchase_order_list_for_recieve.xhtml
+++ b/src/main/webapp/store/store_purchase_order_list_for_recieve.xhtml
@@ -11,16 +11,17 @@
             <p:panel  style="min-width: 100%;">  
                 <f:facet name="header">
                     <h:outputLabel value="Purchase Order List"/>
-                    <h:panelGrid columns="5" >
+                    <h:panelGrid columns="6" >
                         <h:outputLabel value="From Date"/>
                         <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >      
                         </p:calendar>
                         <h:outputLabel value="To Date"/>
-                        <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >                                                                              
+                        <p:calendar styleClass="dateTimePicker" id="toDate" value="#{searchController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >                                                                              
                         </p:calendar>
+                        <p:selectBooleanCheckbox value="#{searchController.reportKeyWord.additionalDetails}" itemLabel="Search All" />
                         <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{searchController.createPoTableStore}"/>
-                        <p:spacer height="30"/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/>
-
+                    </h:panelGrid>
+                    <h:panelGrid columns="5" >
                         <h:outputLabel value="Distributor"/>
                         <h:outputLabel value="Po Number"/>
                         <h:outputLabel value="Po Value"/>
