--- a/src/main/webapp/store/store_report_grn_billitem_store_asset.xhtml
+++ b/src/main/webapp/store/store_report_grn_billitem_store_asset.xhtml
@@ -17,22 +17,22 @@
                         </f:facet>
                         <h:panelGrid columns="2" >
                             <h:outputLabel value="From Date"/>
-                            <p:calendar  id="fromDate" value="#{commonReport.fromDate}" navigator="true" pattern="dd MMMM yyyy hh mm ss a" >      
+                            <p:calendar  id="fromDate" value="#{commonReport1.fromDate}" navigator="true" pattern="dd MMMM yyyy hh mm ss a" >      
                             </p:calendar>
                             <h:outputLabel value="To Date"/>
-                            <p:calendar id="toDate" value="#{commonReport.toDate}" navigator="true" pattern="dd MMMM yyyy hh mm ss a" >                                                                              
+                            <p:calendar id="toDate" value="#{commonReport1.toDate}" navigator="true" pattern="dd MMMM yyyy hh mm ss a" >                                                                              
                             </p:calendar>
                             <h:outputLabel/>
                         </h:panelGrid>
                         <h:panelGrid columns="4" >
                             <p:spacer width="70" height="1"/>
-                            <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{commonReport.createGRNBillItemForAsset()}"/>
+                            <p:commandButton id="btnSearch" ajax="false" value="Search" action="#{commonReport1.createGRNBillItemForAsset()}"/>
                             <p:commandButton value="Print" ajax="false">
                                 <p:printer target="billPrint"></p:printer>
                             </p:commandButton>
-                            <p:commandButton value="Excel" ajax="false">
+                            <p:commandButton value="Excel" ajax="false" action="#{commonReport1.createGRNBillItemForAsset()}" >
                                 <pe:exporter type="xlsx" target="tblBills" fileName="Department_asset_by_bill_item"
-                                             facetBackground="#008000" facetFontSize="15"
+                                             facetBackground="#008000" facetFontSize="15" 
                                              facetFontColor="#FFFFFF" facetFontStyle="BOLD"
                                              cellFontColor="#0000FF" cellFontSize="12" cellFontStyle="NORMAL"
                                              fontName="Courier New"></pe:exporter>
@@ -42,16 +42,16 @@
                             <h:panelGroup id="billPrint">
                                 <p:dataTable rowIndexVar="i" 
                                              id="tblBills" 
-                                             value="#{commonReport.billItems}" var="bi" stickyHeader="true" editingRow="true"  >
+                                             value="#{commonReport1.billItems}" var="bi" stickyHeader="true" editingRow="true"  >
                                     <f:facet name="header">
                                         <h:outputLabel value="Department Assets By Bill Item"/><br/>
                                         <h:outputLabel value="From :" style="white-space: pre-line"/>
-                                        <h:outputLabel  value="#{commonReport.fromDate}" >
+                                        <h:outputLabel  value="#{commonReport1.fromDate}" >
                                             <f:convertDateTime pattern="dd MMM yyyy hh:mm:ss a"/>
                                         </h:outputLabel>
                                         <p:spacer width="10" height="0"/>
                                         <h:outputLabel value="&emsp;To :"/>
-                                        <h:outputLabel  value="#{commonReport.toDate}" >
+                                        <h:outputLabel  value="#{commonReport1.toDate}" >
                                             <f:convertDateTime pattern="dd MMM yyyy hh:mm:ss a"/>
                                         </h:outputLabel>
                                     </f:facet>
